--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,10 @@ TEST = true
 num-test-messages = 10
 
 // client class name
-client-class = "TestClient"
+client-class = "ExampleTestClient"
+
+// package of client class
+client-package = "client"
 
 // num client to create
 num-replicas = 3
